--- a/package.json
+++ b/package.json
@@ -5,5 +5,52 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
-  }
+  },
+  "name": "goit-node-hw-01",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "anymatch": "^3.1.2",
+    "binary-extensions": "^2.2.0",
+    "balanced-match": "^1.0.2",
+    "braces": "^3.0.2",
+    "concat-map": "^0.0.1",
+    "abbrev": "^1.1.1",
+    "chokidar": "^3.5.3",
+    "glob-parent": "^5.1.2",
+    "fill-range": "^7.0.1",
+    "has-flag": "^3.0.0",
+    "ignore-by-default": "^1.0.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-number": "^7.0.0",
+    "minimatch": "^3.1.2",
+    "brace-expansion": "^1.1.11",
+    "ms": "^2.1.3",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "pstree.remy": "^1.1.8",
+    "debug": "^3.2.7",
+    "readdirp": "^3.6.0",
+    "semver": "^5.7.1",
+    "simple-update-notifier": "^1.0.7",
+    "supports-color": "^5.5.0",
+    "to-regex-range": "^5.0.1",
+    "touch": "^3.1.0",
+    "undefsafe": "^2.0.5",
+    "is-glob": "^4.0.3",
+    "picomatch": "^2.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mykhailotsynkevych/goit-node-hw-01.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mykhailotsynkevych/goit-node-hw-01/issues"
+  },
+  "homepage": "https://github.com/mykhailotsynkevych/goit-node-hw-01#readme",
+  "description": ""
 }
