--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "to-regex-range": "^5.0.1",
     "touch": "^3.1.0",
     "undefsafe": "^2.0.5",
+    "uuid": "^9.0.0",
     "yargs": "^17.5.1"
   },
   "repository": {
